Resolve footer layout issues

--- a/wp-app/wp-content/themes/hiid/style.css
+++ b/wp-app/wp-content/themes/hiid/style.css
@@ -10,19 +10,20 @@ Text Domain: Hongik Industrial Design
 */
 
 html {
+    position: relative;
     overflow-y: scroll;
+    min-height: 100%;
 }
 
 body {
     -webkit-font-smoothing: antialiased;
     word-break: keep-all;
     background-color: #ffffff;
+    margin-bottom: 240px;
 }
 
 body, html {
     max-width: 100vw;
-    height: 100%;
-    /* overflow-x: hidden; */
 }
 
 h1, h2, h3, h4, h5, h6, p, a {
@@ -218,9 +219,13 @@ p {
 }
 
 .footer {
+    position: absolute;
     box-shadow: 0 -.0625rem 0 0 #c0c0c0;
     padding-top: 2.25rem;
     padding-bottom: 2.5rem;
+    height: 150px;
+    width: 100%;
+    bottom: 0;
 }
 
 .footer__menu__list {
@@ -1278,7 +1283,11 @@ a:hover .exhibition__section__work__image {
 
 .contact {
     margin-top: 3.5rem;
-    padding: 40px 0 90px 0;
+    padding: 80px 0;
+}
+
+.contact__admission {
+    margin-top: 120px;
 }
 
 .contact__office__title, .contact__admission__title {
@@ -1306,7 +1315,7 @@ a:hover .exhibition__section__work__image {
 }
 
 .contact__office__list__item, .contact__admission__list__item {
-    margin-bottom: 22px;
+    margin-bottom: 16px;
 }
 
 .contact__office__list__item:last-child, .contact__admission__list__item:last-child {
@@ -1314,11 +1323,11 @@ a:hover .exhibition__section__work__image {
 }
 
 .contact__admission__title {
-    margin-top: 90px;
+    /* margin-top: 108px; */
 }
 
 .contact__admission__subject {
-    margin: 0 0 24px 0;
+    margin: 0 0 36px 0;
     font-family: 'Noto Sans Korean', sans-serif;
     font-size: 1rem;
     font-weight: 500;
@@ -1337,7 +1346,7 @@ a:hover .exhibition__section__work__image {
 .contact__admission__link::after {
     position: absolute;
     content: '';
-    background: url("assets/images/hid-contact-arrow.png");
+    background: url("assets/images/hid-exhibition-next.png");
     background-size: 8px 16px;
     width: 8px;
     height: 16px;
